--- a/index.html
+++ b/index.html
@@ -10,10 +10,12 @@
     <title>Submission Dicoding</title>
 </head>
 <body>
-    <header>
+  <!-- Page Header -->
+  <header>
     <div class="jumbotron">
-    <h1>Portofolio</h1>
+      <h1>Portofolio</h1>
     </div>
+
       <nav>
           <ul class="navlist-ul-link">
               <li><a href="#home">Home</a></li>
@@ -23,68 +25,64 @@
           <div class="bx bx-menu" id="menu-icon"></div>
       </nav>
   </header>
+
+    <!-- Page Main -->
     <main>
       <div id="content">
         <article id="home" class="card">
           <h2>Story</h2>
           <img src="img/pic1.jpg" class = "featured-image" alt="story" />
           <p>
-            Hello guys, let me introduce myself. My name is Muh. Alex Saputra but everybody always calls me alex. im a collage
-            student who based on Yogyakarta, now im in 4 semester in my campus with computer science major and im really happy
-            with that, even im kind of annoyed when i see my friends being able to code but im not. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Accusamus temporibus assumenda cumque molestiae sit, quia magnam dolores at officiis, odit itaque perferendis modi facere amet. Eos atque magni reiciendis voluptates suscipit dignissimos aliquam laboriosam libero tempora corporis, mollitia exercitationem harum modi quod voluptatibus, odio temporibus officiis culpa vel repudiandae obcaecati, iure molestias. Consequuntur rerum laborum cupiditate eligendi deserunt quas omnis doloremque, delectus aliquam sit consequatur repellat vitae corrupti suscipit quasi voluptates officiis. Nam maxime ea culpa tempora accusantium maiores, voluptates distinctio quo quas temporibus, recusandae nostrum! Harum dolorum quis blanditiis quo debitis culpa voluptatem! Quisquam animi possimus saepe molestiae libero.
+            Hallo guys, perkenalkan saya Muhammad Alex Saputra saya adalah mahasiswa Universitas Amikom Yogyakarta prodi S1 Informatika semester 4, disamping saya kuliah saya mengikuti organisasi yaitu Amikom Computer Club. Salah satu Organisasi terbaik di Universitas Amikom Yogyakarta, dan mendapatkan predikat The Best IT Organization in Yogyakarta.
           </p>
         </article>
 
         <article id="skills" class="card">
+          <h2>Skills</h2>
             <ul class="skill-img">
                 <li><i class='bx bxl-html5'></i></li>
                 <li><i class='bx bxl-css3' ></i></li>
                 <li><i class='bx bxl-javascript' ></i></li>
-                <li><i class='bx bxl-php' ></i></li>
+                <li><i class='bx bxl-php'></i></li>
             </ul>
         </article>
 
         <article id="about" class="card">
             <h2>About</h2>
-            <img src="img/pic2.jpg" class = "featured-image" alt="about" />
+            <img src="img/about foto.jpg" class = "featured-image" alt="about" />
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic nulla
-            praesentium a blanditiis magni ipsum cumque error, labore delectus
-            unde eligendi esse soluta impedit recusandae ad non id repudiandae.
-            Velit! Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptates sunt hic pariatur corporis sequi ad delectus quaerat a illo debitis nobis labore aliquam voluptatibus eius ex accusamus tenetur repellat commodi aut voluptas, aperiam magni neque ipsa harum? Explicabo culpa delectus natus iure voluptates voluptatum atque expedita libero perspiciatis porro eius autem quas vitae esse officiis eos quo, placeat fuga nemo! Perspiciatis nobis cum quam, quo earum incidunt consectetur eius? Voluptatibus magnam maiores quidem tenetur dicta praesentium aspernatur voluptatum facilis! Nihil animi labore ea pariatur optio quasi sapiente quod error enim, magni fugit quas? Temporibus maiores, culpa quos dignissimos inventore iusto porro doloremque itaque quis? Deserunt veritatis obcaecati optio sed blanditiis libero saepe architecto quod modi delectus ullam dolore minus mollitia rem animi doloribus voluptatem iste, totam ad veniam? Adipisci sapiente sunt nobis. Explicabo facere error ut. Culpa quae provident cumque, molestiae ipsum tempora necessitatibus aliquam sequi, delectus odit mollitia inventore quasi. Asperiores praesentium ad blanditiis explicabo quisquam voluptates ipsum cum animi ut iure obcaecati numquam, reprehenderit laborum ducimus nemo quidem consequuntur quos sapiente hic aspernatur architecto dignissimos beatae soluta. Adipisci, eaque repellat nam voluptates quisquam omnis saepe, eos libero eum reiciendis earum tempore totam cupiditate molestiae, assumenda facilis quidem temporibus?
+            Di Amikom Computer Club saya mempunyai departemen dan divisi, Saya menjabat di Departemen Pengembangan Sumber Daya Manusia (PSDM) karena saya mempunyai keahlian di manajemen organisasi , dan pada Divisi Web Programming karena saya mempunyai keahlian di bidang Web Programming.
           </p>
-          <section>
         </article>
       </div>
+
       <aside>
-          <article class="profile card">
-              <header>
-        <h2>My Profile</h2>
-        <figure>
-          <img src="img/alex.png" class= "featured-image" alt="alex" />  
-        </figure>
-        </header>
-        <section>
-            <h3>More Information : </h3>
-            <table>
-                <tr>
-                    <th>Name </th>
-                    <td>Muh. Alex Saputra</td>
-                </tr>
-                <tr>
-                    <th>Born </th>
-                    <td>Componge, 23 January 2001</td>
-                </tr>
-                <tr>
-                    <th>Nationality </th>
-                    <td>Indonesian</td>
-                </tr>
-            </table>
-        </section>
-      </article>
+        <article class="profile card">
+          <header>
+            <h2>My Profile</h2>
+              <figure>
+                <img src="img/alex.png" class= "featured-image" alt="alex" />  
+              </figure>
+          </header>
+              <h3>More Information : </h3>
+              <table>
+                  <tr>
+                      <th>Name </th>
+                      <td>Muh. Alex Saputra</td>
+                  </tr>
+                  <tr>
+                      <th>Born </th>
+                      <td>Componge, 23 January 2001</td>
+                  </tr>
+                  <tr>
+                      <th>Nationality </th>
+                      <td>Indonesian</td>
+                  </tr>
+              </table>
+        </article>
       </aside> 
-      </main>
-        <footer>
+    </main>
+      <footer>
           <p>Salam Hangat Muh. Alex Saputra</p>
       </footer>  
 <script src="app.js"></script>  
